objects/ssot__LearningAchievement__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AbbreviationText__c</fullName>
        <label>Abbreviation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AcademicCredentialId__c</fullName>
        <label>Academic Credential</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AcademicLevel__c</fullName>
        <label>Academic Level</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FieldOfStudy__c</fullName>
        <label>Field of Study</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Learning Achievement Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IssuerId__c</fullName>
        <label>Issuer</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecordType__c</fullName>
        <label>Record Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SpecializationText__c</fullName>
        <label>Specialization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719817601404_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LearningAchievement_AcademicCredenti_rel</label>
        <referenceTo>ssot__AcademicCredential__dlm</referenceTo>
        <relationshipLabel>LearningAchievement_AcademicCredenti_rel</relationshipLabel>
        <relationshipName>rel_1719817601404_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719817714238_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LearningAchievement_IssuerId_map_Acc_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>LearningAchievement_IssuerId_map_Acc_rel</relationshipLabel>
        <relationshipName>rel_1719817714238_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>